--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -2,9 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Over Mij</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="all" href="/css/style.css"/>
+    <title>About</title>
 </head>
-<body>
-<p>Ik ben Enes</p>
+<body class="about">
+<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerParty" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerParty">
+            <a class="navbar-brand text-warning" href="/home">Let's Party!</a>
+            <ul class="navbar-nav me-auto my-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="/home">home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/venuedetails">zaaldetails</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">over mij</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <main class="ml-auto">
+        <h1>Over Mij</h1>
+        <ol class="about">
+            <li th:text="${myname}">myname</li>
+            <li th:text="${mystreet}">mystreet</li>
+            <li th:text="${mycity}">mycity</li>
+        </ol>
+        <p>Ik ben Enes Sarioglu en woon in Oud-Stationsplein 8, Willebroek</p>
+    </main>
+</div>
+<footer class="footer mt-auto pt-2 border-top text-center">
+    &copy;ThomasMore
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
